# damn-vulnerable-ai-agent

./: .env.example  .gitignore  LICENSE  README.md  auth.py  commands.md  llm.py  main.py  pyproject.toml  requirements.txt  vulnerable_web_agent.py
.cursor/rules/: python-type-hints.mdc  tech-stack.mdc
static/: bullseye.css  dividedhazard.css  idlethat.css
templates/: base.html  bullseye.html  dividedhazard.html  idlethat.html  login.html
templates/partials/: idlethat_dashboard.html  message.html  tool_call.html
