[project]
name = "damn-vulnerable-ai-agent"
version = "0.1.0"
description = "Deliberately vulnerable AI agent for security research"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "streamlit>=1.33",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["vulnerable_web_agent"]

[dependency-groups]
dev = [
    "vllm",
]

[tool.uv]
# uv's default is `default-groups = ["dev"]`, which would install vLLM/CUDA for everyone.
default-groups = []
