[project]
name = "damn-vulnerable-ai-agent"
version = "0.1.0"
description = "Deliberately vulnerable AI agent for security research"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.27",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.22",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "vllm",
]

[tool.uv]
# uv's default is `default-groups = ["dev"]`, which would install vLLM/CUDA for everyone.
default-groups = []
